Update to add grads in games award, as well as various wording tweaks

--- a/FDonovanCV.tex
+++ b/FDonovanCV.tex
@@ -103,7 +103,7 @@
 \input{resume/summary.tex} % First draft done
 \input{resume/skills.tex}
 \input{resume/published.tex}
-% \input{resume/honors.tex}
+\input{resume/honors.tex}
 \input{resume/education.tex}
 \input{resume/experience.tex}
 % \input{resume/projects.tex}
