--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -38,7 +38,7 @@
         {FXPlus}
         {Senior Ambassador}
         {Falmouth, Cornwall}
-        {June 2020 - Current}
+        {June 2020 - September 2021}
         {
             \begin{cvitems}
                 \item Promoted from Student Ambassador
