--- a/resume/honors.tex
+++ b/resume/honors.tex
@@ -1,7 +1,7 @@
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Honors \& Awards}
+\cvsection{Awards}
 
 
 %-------------------------------------------------------------------------------
@@ -17,7 +17,7 @@
 
 %---------------------------------------------------------
   \cvhonor
-    {Shortlist} % Award
+    {Finalist} % Award
     {Grads In Games Student Game Award} % Event
     {} % Location
     {2022} % Date(s)
