--- a/resume/published.tex
+++ b/resume/published.tex
@@ -25,21 +25,21 @@
 
     \cventry
     {Self published to Steam (\href{https://store.steampowered.com/app/1836170/Castan/}{https://store.steampowered.com/app/1836170/Castan/})}
-    {Castan - Producer \& Team Lead}
+    {Castan - Producer}
     {Unity 2020.3}
-    {September 2021 - Current}
+    {September 2021 - May 2022}
     {
         \begin{cvitems}
-            \item Made the decision alongside my team to cancel a project in pre-production to develop this game instead
+            \item Utilised Story Points \& Velocity, Release Planning, and Jira to manage scope
+            \item Facilitated \& assisted with several significant redesigns
             \item Developed a Github Action workflow to automatically build, test \& publish daily builds to Steam
-            \item Utilised Story Points, Release Planning, and Jira to produce a development roadmap
         \end{cvitems}  
     }
 
 
     \cventry
     {Self published to Steam (\href{https://store.steampowered.com/app/1603990/Carma/}{https://store.steampowered.com/app/1603990/Carma/})}
-    {Carma - Producer \& Team Lead}
+    {Carma - Producer}
     {Unity 2019.4}
     {Published June 2021}
     {
@@ -53,17 +53,17 @@
         \end{cvitems}
     }
 
-    \cventry
-    {Self published to itch.io (\href{https://dayluke.itch.io/yvaga-station}{https://dayluke.itch.io/yvaga-station})}
-    {Yvaga Station - Team Lead \& Programmer}
-    {Unity 2018.4}
-    {Published May 2020}
-    {
-        \begin{cvitems}
-            \item Presented a concept pitch to in order to continue development past prototype stage
-            \item Implemented asymmetric multiplayer game using PUN2 package for networking
-            \item Designed and implemented a modular custom movement system to expand on the options available to the player
-            % \item The game has 272 downloads (as of February 2021) on itch.io
-        \end{cvitems}
-    }
+    % \cventry
+    % {Self published to itch.io (\href{https://dayluke.itch.io/yvaga-station}{https://dayluke.itch.io/yvaga-station})}
+    % {Yvaga Station - Programmer \& Producer}
+    % {Unity 2018.4}
+    % {Published May 2020}
+    % {
+    %     \begin{cvitems}
+    %         \item Presented a concept pitch to in order to continue development past prototype stage
+    %         \item Implemented asymmetric multiplayer game using PUN2 package for networking
+    %         \item Designed and implemented a modular custom movement system to expand on the options available to the player
+    %         % \item The game has 272 downloads (as of February 2021) on itch.io
+    %     \end{cvitems}
+    % }
 \end{cventries}
