--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -13,8 +13,8 @@
     \begin{cvitems}
         \text{}
         \item
-        \item Project Management: Jira, Confluence, Trello, Agile
-        \item Version Control: Git
+        \item Agile Management: Story Points, Velocity, Sprint \& Release Planning \& Review, Scrum, CD Pipelines
+        \item Software: Jira, Confluence, Trello, Git, GitHub \& Bitbucket, Google \& Microsoft Suite
         \item Game Engines: Unity, Unreal Engine 4
         \item Languages: C\#, C++, Latex, Github Actions
         % \item Proficient in C\# and have some experience with C++
