--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -8,5 +8,5 @@
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvparagraph}
-    I am an avid programmer and passionate producer, with a strong knowledge of version control using Git, agile methodology, and an excitement for facing new, interesting challenges. I have lead teams which have published to both Itch and Steam, always with a focus on maintaining healthy and flexible working practices. My ideal position would be an Associate Producer role, with a strong focus on growing my skills and experience so I could progress to a more senior position.
+    I am a passionate Producer with a background in programming, with a strong knowledge of version control using Git, agile methodology, and an excitement for facing new, interesting challenges. I have lead teams which have published to both Itch and Steam, always with a focus on maintaining healthy and flexible working practices. I have been using my time post graduation to recover from burnout, as well as expanding my knowledge of Art Production. My ideal position would be an Associate Producer role, with a strong focus on growing my skills and experience to progress to a more senior position.
 \end{cvparagraph}
