Add linkedin link and change job titles to associateProducer

--- a/FDonovanCV.tex
+++ b/FDonovanCV.tex
@@ -59,14 +59,14 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Frost}{Donovan}
-\position{Producer{\enskip\cdotp\enskip}Programmer}
+\position{Associate Producer}
 % \address{Falmouth, Cornwall, United Kingdom}
 
 % \mobile{07747 596 167}
 \email{FrostBDonovan@gmail.com}
 \homepage{fdonovan98.github.io/portfolio}
 \github{FDonovan98}
-% \linkedin{posquit0}
+\linkedin{frost-donovan}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{EachAbyss}
