added link to artstation and switched over to fontawesome5 rather than fontawesome

--- a/FDonovanCV.tex
+++ b/FDonovanCV.tex
@@ -67,6 +67,7 @@
 \homepage{fdonovan98.github.io/portfolio}
 \github{FDonovan98}
 \linkedin{frost-donovan}
+\artstation{frostdonovan}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{EachAbyss}
