Added art softwware to skills and reordered link bar

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -41,7 +41,7 @@
         {June 2020 - September 2021}
         {
             \begin{cvitems}
-                \item Promoted from Student Ambassador
+                % \item Promoted from Student Ambassador
                 \item Increased responsibility for the smooth running of events
                 \item Manages the distribution of Student Ambassadors during events
                 \item Relied on to handle any complications or problems that arise during an event
