--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -13,10 +13,11 @@
     \begin{cvitems}
         \text{}
         \item
-        \item Agile Management: Story Points, Velocity, Sprint \& Release Planning \& Review, Scrum, CD Pipelines
-        \item Software: Jira, Confluence, Trello, Git, GitHub \& Bitbucket, Google \& Microsoft Suite
-        \item Game Engines: Unity, Unreal Engine 4
-        \item Languages: C\#, C++, Latex, Github Actions
+        \item Agile Management: \textit{User Stories, Story Points, Velocity, Sprint \& Release Planning \& Review, Scrum, CD Pipelines}
+        \item Software: \textit{Jira, Confluence, Git, Trello, GitHub \& Bitbucket, Google \& Microsoft Suite}
+        \item Art Software: \textit{Blender, Substance Painter, Clip Studio Paint}
+        \item Languages: \textit{C\#, C++, Latex, Github Actions}
+        \item Game Engines: \textit{Unity, Unreal Engine 4}
         % \item Proficient in C\# and have some experience with C++
         % \item Confident with version control using Git, including branching and fixing of merge conflicts
         % \item Familiar with Unity and some experience in Unreal Engine 4, including use of blueprints
