--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -42,7 +42,7 @@
         {
             \begin{cvitems}
                 % \item Promoted from Student Ambassador
-                \item Increased responsibility for the smooth running of events
+                \item Responsible for the smooth running of events
                 \item Manages the distribution of Student Ambassadors during events
                 \item Relied on to handle any complications or problems that arise during an event
             \end{cvitems}
