--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -43,8 +43,8 @@
             \begin{cvitems}
                 % \item Promoted from Student Ambassador
                 \item Responsible for the smooth running of events
-                \item Manages the distribution of Student Ambassadors during events
-                \item Relied on to handle any complications or problems that arise during an event
+                \item Managed the distribution of Student Ambassadors during events
+                \item Relied on to handle any complications or problems that arose during an event
             \end{cvitems}
         }
 
