Start updating for art

--- a/FDonovanCV.tex
+++ b/FDonovanCV.tex
@@ -59,15 +59,15 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Frost}{Donovan}
-\position{Associate Producer}
+\position{Junior Environment/ Technical Artist}
 % \address{Falmouth, Cornwall, United Kingdom}
 
 % \mobile{07747 596 167}
 \email{FrostBDonovan@gmail.com}
 \homepage{fdonovan98.github.io/portfolio}
-\github{FDonovan98}
 \artstation{frostdonovan}
 \linkedin{frost-donovan}
+\github{FDonovan98}
 % \gitlab{gitlab-id}
 % \stackoverflow{SO-id}{SO-name}
 % \twitter{EachAbyss}
