--- a/resume/education.tex
+++ b/resume/education.tex
@@ -8,10 +8,21 @@
 \begin{cventries}
 %---------------------------------------------------------
   \cventry
+  {MA Game Art}
+  {Falmouth University}
+  {Falmouth, United Kingdom}
+  {September 2022 - August 2023}
+  {
+    \begin{cvitems}
+      \item
+    \end{cvitems}
+  }
+
+  \cventry
     {BSc Computing For Games} % Degree
     {Falmouth University} % Institution
     {Falmouth, United Kingdom} % Location
-    {Sept. 2019 - June 2022} % Date(s)
+    {September 2019 - June 2022} % Date(s)
     {
       \begin{cvitems} % Description(s) bullet points
         \item Worked with multi-discipline teams to bring several games through a full development cycle
