--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -9,15 +9,14 @@
 %-------------------------------------------------------------------------------
 
 \begin{cvparagraph}
-    
     \begin{cvitems}
         \text{}
         \item
+        \item Art Software: \textit{Maya, zBrush, Substance Designer, Substance Painter, Blender}
+        \item Game Engines: \textit{Unreal Engine 5, Unreal Engine 4, Unity}
         \item Agile Management: \textit{User Stories, Story Points, Velocity, Sprint \& Release Planning \& Review, Scrum, CD Pipelines}
         \item Software: \textit{Jira, Confluence, Git, Trello, GitHub \& Bitbucket, Google \& Microsoft Suite}
-        \item Art Software: \textit{Blender, Substance Painter, Clip Studio Paint}
         \item Languages: \textit{C\#, C++, Latex, Github Actions}
-        \item Game Engines: \textit{Unity, Unreal Engine 4}
         % \item Proficient in C\# and have some experience with C++
         % \item Confident with version control using Git, including branching and fixing of merge conflicts
         % \item Familiar with Unity and some experience in Unreal Engine 4, including use of blueprints
