--- a/resume/education.tex
+++ b/resume/education.tex
@@ -14,7 +14,7 @@
   {September 2022 - August 2023}
   {
     \begin{cvitems}
-      \item
+      \item Liaised with technical staff to secure further education on physical lighting techniques for myself and peers
     \end{cvitems}
   }
 
