--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -8,5 +8,7 @@
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvparagraph}
-    I am a passionate Producer with a background in programming, with a strong knowledge of version control using Git, agile methodology, and an excitement for facing new, interesting challenges. I have lead teams which have published to both Itch and Steam, always with a focus on maintaining healthy and flexible working practices. I have been using my time post graduation to recover from burnout, as well as expanding my knowledge of Art Production. My ideal position would be an Associate Producer role, with a strong focus on growing my skills and experience to progress to a more senior position.
+    I am an artist with a non-traditional background, coming from programming and production. I fell in love with game art while working as a producer alongside artists creating and publishing games during my undergrad, and since have been pursuing a masters in game art. My background gives me an aptitude for picking up and learning new software and technical principles quickly, and I have excelled at learning, adapting, and experimenting with new workflows. My production experience has given me a strong grounding in agile methodology and helped train my flexibility, helping me understand and utilise the different stages of production, and helping me communicate and work well in a team of mixed skills and abilities.
+
+    Like most people in games, I'm a massive nerd. I love film, and love how my masters has given me a deeper appreciation for the medium as I started to learn and analyse how composition and especially lighting were set up in a shot and why. I've also got into Warhammer 40k for it's deep and at times wildly over the top lore, and have recently bought a 3D printer, which may be the coolest purchase I've ever made.
 \end{cvparagraph}
