Update skills formatting for readability, add note about supporting peers in education and move experience to new page

--- a/resume/education.tex
+++ b/resume/education.tex
@@ -15,6 +15,7 @@
   {
     \begin{cvitems}
       \item Liaised with technical staff to secure further education on physical lighting techniques for myself and peers
+      \item Supported peers with technical and project management aspects, especially those new to game development
     \end{cvitems}
   }
 
