--- a/resume/skills.tex
+++ b/resume/skills.tex
@@ -12,11 +12,11 @@
     \begin{cvitems}
         \text{}
         \item
-        \item Art Software: \textit{Maya, zBrush, Substance Designer, Substance Painter, Blender}
-        \item Game Engines: \textit{Unreal Engine 5, Unreal Engine 4, Unity}
-        \item Agile Management: \textit{User Stories, Story Points, Velocity, Sprint \& Release Planning \& Review, Scrum, CD Pipelines}
-        \item Software: \textit{Jira, Confluence, Git, Trello, GitHub \& Bitbucket, Google \& Microsoft Suite}
-        \item Languages: \textit{C\#, C++, Latex, Github Actions}
+        \item \textbf{Art Software:} Maya, zBrush, Substance Designer, Substance Painter, Blender
+        \item \textbf{Game Engines:} Unreal Engine 5, Unreal Engine 4, Unity
+        \item \textbf{Agile Management:} User Stories, Story Points, Velocity, Sprint \& Release Planning \& Review, Scrum, CD Pipelines
+        \item \textbf{Software:} Jira, Confluence, Git, Trello, GitHub \& Bitbucket, Google \& Microsoft Suite
+        \item \textbf{Languages:} C\#, C++, Latex, Github Actions
         % \item Proficient in C\# and have some experience with C++
         % \item Confident with version control using Git, including branching and fixing of merge conflicts
         % \item Familiar with Unity and some experience in Unreal Engine 4, including use of blueprints
