update finish for gng director to may 22

--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -12,7 +12,7 @@
         {Glass Nomad Games}
         {Director}
         {Falmouth, Cornwall}
-        {March 2021 - Current}
+        {March 2021 - May 2022}
         {
             \begin{cvitems}
                 \item Started a company to publish video games my team and I were developing
