Add participation in gig environment art to awards

--- a/resume/honors.tex
+++ b/resume/honors.tex
@@ -16,6 +16,11 @@
 \begin{cvhonors}
 
 %---------------------------------------------------------
+\cvhonor
+  {Participant} % Award
+  {Grads In Games Environment Art} % Event
+  {} % Location
+  {2023} % Date(s)
   \cvhonor
     {Finalist} % Award
     {Grads In Games Student Game Award} % Event
