added point to ma gart para

--- a/resume/education.tex
+++ b/resume/education.tex
@@ -14,8 +14,9 @@
   {September 2022 - August 2023}
   {
     \begin{cvitems}
-      \item Liaised with technical staff to secure further education on physical lighting techniques for myself and peers
+      \item Heavily focused my pieces, improving both my technical and artistic skill and understanding
       \item Supported peers with technical and project management aspects, especially those new to game development
+      \item Liaised with technical staff to secure further education on physical lighting techniques for myself and peers
     \end{cvitems}
   }
 
