add octoghost work and change skills to technical skills

--- a/FDonovanCV.tex
+++ b/FDonovanCV.tex
@@ -59,7 +59,7 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Frost}{Donovan}
-\position{Junior Environment/ Technical Artist}
+\position{Junior Environment Artist}
 % \address{Falmouth, Cornwall, United Kingdom}
 
 % \mobile{07747 596 167}
@@ -101,7 +101,7 @@
 %	CV/RESUME CONTENT
 %	Each section is imported separately, open each file in turn to modify content
 %-------------------------------------------------------------------------------
-\input{resume/summary.tex} % First draft done
+\input{resume/summary.tex}
 \input{resume/skills.tex}
 \input{resume/published.tex}
 \input{resume/honors.tex}
