--- a/resume/education.tex
+++ b/resume/education.tex
@@ -16,7 +16,7 @@
     \begin{cvitems}
       \item Heavily focused my pieces, improving both my technical and artistic skill and understanding
       \item Supported peers with technical and project management aspects, especially those new to game development
-      \item Liaised with technical staff to secure further education on physical lighting techniques for myself and peers
+      \item Worked closely with level designers to develop blockouts into finished areas
     \end{cvitems}
   }
 
