--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -9,6 +9,18 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
     \cventry
+        {Octoghost}
+        {Environment Artist}
+        {Falmouth, Cornwall}
+        {February 2023 - Current}
+        {
+            \begin{cvitems}
+                \item Worked closely with designers, turning blockouts into recognisable areas
+                \item Balanced creating aesthetically pleasing areas with maintaining mechanical robustness and improving player flow
+            \end{cvitems}
+        }
+
+    \cventry
         {Glass Nomad Games}
         {Director}
         {Falmouth, Cornwall}
@@ -34,19 +46,19 @@
     %         \end{cvitems}
     %     }
 
-    \cventry
-        {FXPlus}
-        {Senior Ambassador}
-        {Falmouth, Cornwall}
-        {June 2020 - September 2021}
-        {
-            \begin{cvitems}
-                % \item Promoted from Student Ambassador
-                \item Responsible for the smooth running of events
-                \item Managed the distribution of Student Ambassadors during events
-                \item Relied on to handle any complications or problems that arose during an event
-            \end{cvitems}
-        }
+    % \cventry
+    %     {FXPlus}
+    %     {Senior Ambassador}
+    %     {Falmouth, Cornwall}
+    %     {June 2020 - September 2021}
+    %     {
+    %         \begin{cvitems}
+    %             % \item Promoted from Student Ambassador
+    %             \item Responsible for the smooth running of events
+    %             \item Managed the distribution of Student Ambassadors during events
+    %             \item Relied on to handle any complications or problems that arose during an event
+    %         \end{cvitems}
+    %     }
 
     % \cventry
     %     {FXPlus}
