update as finished masters

--- a/FDonovanCV.tex
+++ b/FDonovanCV.tex
@@ -59,7 +59,7 @@
 % Available options: circle|rectangle,edge/noedge,left/right
 % \photo[rectangle,edge,right]{./examples/profile}
 \name{Frost}{Donovan}
-\position{Junior Environment Artist}
+\position{Junior 3D Generalist, Assistant Lecturer}
 % \address{Falmouth, Cornwall, United Kingdom}
 
 % \mobile{07747 596 167}
@@ -105,9 +105,9 @@
 \input{resume/skills.tex}
 \input{resume/published.tex}
 \input{resume/honors.tex}
-\input{resume/education.tex}
-\newpage
 \input{resume/experience.tex}
+\newpage
+\input{resume/education.tex}
 % \input{resume/projects.tex}
 % \input{resume/presentation.tex}
 % \input{resume/writing.tex}
