--- a/resume/education.tex
+++ b/resume/education.tex
@@ -15,8 +15,8 @@
   {
     \begin{cvitems}
       \item Heavily focused my pieces, improving both my technical and artistic skill and understanding
-      \item Supported peers with technical and project management aspects, especially those new to game development
-      \item Worked closely with level designers to develop blockouts into finished areas
+      \item Supported peers, especially with technical and project management aspects
+      \item Volunteered in first year art classes to help teach new undergraduates
     \end{cvitems}
   }
 
