--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -9,14 +9,15 @@
 %-------------------------------------------------------------------------------
 \begin{cventries}
     \cventry
-        {Octoghost}
-        {Environment Artist}
+        {Octoghost Studio}
+        {Environment \& Lighting Artist}
         {Falmouth, Cornwall}
         {February 2023 - Current}
         {
             \begin{cvitems}
                 \item Worked closely with designers, turning blockouts into recognisable areas
                 \item Balanced creating aesthetically pleasing areas with maintaining mechanical robustness and improving player flow
+                \item Lit environments, with a focus on subtly guiding players
             \end{cvitems}
         }
 
@@ -46,19 +47,19 @@
     %         \end{cvitems}
     %     }
 
-    % \cventry
-    %     {FXPlus}
-    %     {Senior Ambassador}
-    %     {Falmouth, Cornwall}
-    %     {June 2020 - September 2021}
-    %     {
-    %         \begin{cvitems}
-    %             % \item Promoted from Student Ambassador
-    %             \item Responsible for the smooth running of events
-    %             \item Managed the distribution of Student Ambassadors during events
-    %             \item Relied on to handle any complications or problems that arose during an event
-    %         \end{cvitems}
-    %     }
+%    \cventry
+%         {FXPlus}
+%         {Senior Ambassador}
+%         {Falmouth, Cornwall}
+%         {June 2020 - September 2021}
+%         {
+%             \begin{cvitems}
+%                 % \item Promoted from Student Ambassador
+%                 \item Responsible for the smooth running of events
+%                 \item Managed the distribution of Student Ambassadors during events
+%                 \item Relied on to handle any complications or problems that arose during an event
+%             \end{cvitems}
+%         }
 
     % \cventry
     %     {FXPlus}
