--- a/resume/summary.tex
+++ b/resume/summary.tex
@@ -8,7 +8,11 @@
 %	CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvparagraph}
-    I am an artist with a non-traditional background, coming from programming and production. I fell in love with game art while working as a producer alongside artists creating and publishing games during my undergrad, and since have been pursuing a masters in game art. My background gives me an aptitude for picking up and learning new software and technical principles quickly, and I have excelled at learning, adapting, and experimenting with new workflows. My production experience has given me a strong grounding in agile methodology and helped train my flexibility, helping me understand and utilise the different stages of production, and helping me communicate and work well in a team of mixed skills and abilities.
+    I am an artist with a non-traditional background, coming from programming and production. I fell in love with game art while working as a producer alongside artists creating and publishing games during my undergrad, and have since completed a Masters in Game Art and am working part time as an environment artist with an indie studio. I am a generalist 3D artist who specialises in environment, lighting, and technical art, but I am always looking for opportunities to branch out and expand my knowledge and skills. 
+    
+    Through my masters and undergrad I have spent a lot of time helping to teach my peers, rewording and re-explaining lectures, providing constructive feedback, and attending first year art classes during my masters. This attendance was initially to help brush up on my fundamentals, but quickly turned into me assisting with teaching the first year students. This is something I've found incredibly rewarding throughout, and I would love to continue it in the future, either in a lecturing or mentor role.
 
-    Like most people in games, I'm a massive nerd. I love film, and love how my masters has given me a deeper appreciation for the medium as I started to learn and analyse how composition and especially lighting were set up in a shot and why. I've also got into Warhammer 40k for its deep and at times wildly over the top lore, and have recently bought a 3D printer, which may be the coolest purchase I've ever made.
+    % My background gives me an aptitude for picking up and learning new software and technical principles quickly, and I have excelled at learning, adapting, and experimenting with new workflows. My production experience has given me a strong grounding in agile methodology and helped train my flexibility, helping me understand and utilise the different stages of production, and helping me communicate and work well in a team of mixed skills and abilities.
+
+    Like most people in games, I'm a massive nerd. I love film, and love how my masters has given me a deeper appreciation for the medium as I started to learn and analyse how composition and especially lighting were set up in a shot and why. I've also got into Warhammer 40k for its deep and wildly over the top lore, and have recently bought a 3D printer, which may be the coolest purchase I've ever made.
 \end{cvparagraph}
