Fit cv onto a single page

--- a/resume/education.tex
+++ b/resume/education.tex
@@ -29,8 +29,8 @@
       \begin{cvitems} % Description(s) bullet points
         \item Worked with multi-discipline teams to bring several games through a full development cycle
         \item Published two to Steam, one of which was shortlisted for Grads In Games Student Game Award
-        \item Wrote a dissertation on Continuous Delivery (CD) In Student Teams, implementing and analysing the effect of CD pipelines
-        \item Graduated with a 2:1 Honours
+        % \item Wrote a dissertation on Continuous Delivery (CD) In Student Teams, implementing and analysing the effect of CD pipelines
+        % \item Graduated with a 2:1 Honours
       %   \item Learned about and improved upon creating neat, maintainable code through commenting and UML diagrams
       %   \item Participated in modules including creating a custom physical controller and designing an audio generation tool
         % \item Received and responded to feedback from concept pitches, module evaluations and regular game progress reviews
