--- a/resume/experience.tex
+++ b/resume/experience.tex
@@ -10,7 +10,7 @@
 \begin{cventries}
     \cventry
         {Octoghost Studio}
-        {Environment \& Lighting Artist}
+        {Environment Artist}
         {Falmouth, Cornwall}
         {February 2023 - Current}
         {
