--- a/resume/published.tex
+++ b/resume/published.tex
@@ -45,11 +45,11 @@
     {
         \begin{cvitems}
             \item Shortlisted for the Grads In Games Student Game Award
-            \item Worked with a multidisciplinary team to bring Carma from concept to published game
-            \item Planned sprints and development milestones using Agile
+            % \item Worked with a multidisciplinary team to bring Carma from concept to published game
+            % \item Planned sprints and development milestones using Agile
             \item Removed blockers and streamlined development pipelines
             \item Focused on maintaining team health and reinforcing healthy working practices
-            \item Set up Steam store and maintained updated builds
+            % \item Set up Steam store and maintained updated builds
         \end{cvitems}
     }
 
